# CL-LNS

./: CONTRIBUTING.md  LNS.py  README.md  environment.txt  environment_cpu.txt  ilp_model.py  ilp_solver.py  instance_loader.py  requirements.txt  requirements_cpu.txt  scip_solver.py  setup.py  train_neural_LNS.py  xpress_solver.py
graph_datasets/: bipartite_graph.py  bipartite_graph_dataset.py  bipartite_graph_dataset_test.py  bipartite_graph_loader.py  bipartite_graph_loader_test.py  bipartite_graph_observations.py  evaluation_data.py  evaluation_data_test.py  event_handlers.py  featurization_test.py  informations.py  solved_milp_dataset.py  solved_milp_dataset_test.py  step_rewards.py
instances/INDSET_ER_6000/: instance_ER4_0.cip  instance_ER4_1.cip  instance_ER4_2.cip  instance_ER4_3.cip  instance_ER4_4.cip  instance_ER4_5.cip  instance_ER4_6.cip  instance_ER4_7.cip  instance_ER4_8.cip  instance_ER4_9.cip
instances/INDSET_ER_6000/train/: train_instance_ER4_0.cip  train_instance_ER4_1.cip  train_instance_ER4_2.cip  train_instance_ER4_3.cip  train_instance_ER4_4.cip  train_instance_ER4_5.cip  train_instance_ER4_6.cip  train_instance_ER4_7.cip  train_instance_ER4_8.cip  train_instance_ER4_9.cip
ml4co/: CMakeLists.txt
ml4co/ops/: prenorm.py  prenorm_test.py  split_and_pad.py  split_and_pad_test.py
ml4co/ops/cc/: cuda_utils.h  ml4co_ops.cc  prenorm_op.cc  prenorm_op.cu  prenorm_op.h  split_and_pad_op.cc  split_and_pad_op.cu  split_and_pad_op.h
ml4co/rl/env/: ecole_wrapper.py
model/: INDSET_example.pt
neural_nets/: gasse_convolution.py  gat_convolution.py  gin_convolution.py  gnn_policy.py  losses.py  prenorm.py
